todos-api/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todos-api
  namespace: team43
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todos-api
  template:
    metadata:
      labels:
        app: todos-api
        redis-access: "true"
    spec:
      restartPolicy: Always
      containers:
      - name: todos-api
        image: 561341012850.dkr.ecr.us-east-1.amazonaws.com/team43-todos-api:latest
        ports:
        - name: todos-api-port
          containerPort: 8082
          protocol: TCP
