todos-api/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todos-api
  namespace: team43
spec:
  selector:
    app: todos-api
  ports:
    - protocol: TCP
      port: 8082
      targetPort: todos-api-port
